--- a/cf/i18n/resources/fr-fr.untranslated.json
+++ b/cf/i18n/resources/fr-fr.untranslated.json
@@ -1,5 +1,9 @@
 [
   {
+    "id": " [--router-group ROUTER_GROUP]",
+    "translation": " [--router-group ROUTER_GROUP]"
+  },
+  {
     "id": "ALIAS",
     "translation": "ALIAS"
   },
@@ -180,6 +184,10 @@
     "translation": "Incorrect Usage. Requires DOMAIN and SERVICE_INSTANCE as arguments\n\n"
   },
   {
+    "id": "Incorrect Usage. Requires DOMAIN as an argument\n\n",
+    "translation": "Incorrect Usage. Requires DOMAIN as an argument\n\n"
+  },
+  {
     "id": "Instance",
     "translation": "Instance"
   },
@@ -224,8 +232,16 @@
     "translation": "Route {{.URL}} is already bound to service instance {{.ServiceInstanceName}}."
   },
   {
+    "id": "Router group {{.RouterGroup}} not found",
+    "translation": "Router group {{.RouterGroup}} not found"
+  },
+  {
     "id": "Routes",
     "translation": "Routes"
+  },
+  {
+    "id": "Routes for this domain will be configured only on the specified router group",
+    "translation": "Routes for this domain will be configured only on the specified router group"
   },
   {
     "id": "SERVICES",
