--- a/cf/i18n/resources/ko-kr.untranslated.json
+++ b/cf/i18n/resources/ko-kr.untranslated.json
@@ -12,6 +12,10 @@
     "translation": "   CF_NAME push [-f MANIFEST_PATH]\n"
   },
   {
+    "id": " [--router-group ROUTER_GROUP]",
+    "translation": " [--router-group ROUTER_GROUP]"
+  },
+  {
     "id": "Bind a service instance to a route",
     "translation": "Bind a service instance to a route"
   },
@@ -560,6 +564,10 @@
     "translation": "Incorrect Usage. Requires DOMAIN and SERVICE_INSTANCE as arguments\n\n"
   },
   {
+    "id": "Incorrect Usage. Requires DOMAIN as an argument\n\n",
+    "translation": "Incorrect Usage. Requires DOMAIN as an argument\n\n"
+  },
+  {
     "id": "No app files found in '{{.Path}}'",
     "translation": "No app files found in '{{.Path}}'"
   },
@@ -582,6 +590,14 @@
   {
     "id": "Route {{.URL}} is already bound to service instance {{.ServiceInstanceName}}.",
     "translation": "Route {{.URL}} is already bound to service instance {{.ServiceInstanceName}}."
+  },
+  {
+    "id": "Router group {{.RouterGroup}} not found",
+    "translation": "Router group {{.RouterGroup}} not found"
+  },
+  {
+    "id": "Routes for this domain will be configured only on the specified router group",
+    "translation": "Routes for this domain will be configured only on the specified router group"
   },
   {
     "id": "Server error, error code: 1002, message: cannot set space role because user is not part of the org",
