Add the routing field to 'cf domains' command. Rewrite test cases for domains command
The routing field indicates the specific routing type associated to that domain.
This is found using the domain's router_group_guid to find the corresponding router group
in the Routing API.

* Routing api endpoint is mandatory when at least one shared domain has a
non-null router group

[#100981770]

Signed-off-by: Mark DeLillo <mdelillo@pivotal.io>
Signed-off-by: Mark St.Godard <markstgodard@gmail.com>
Signed-off-by: Chris Piraino <cpiraino@pivotal.io>
Signed-off-by: Fermin Ordaz <fermin.ordaz@gmail.com>

--- a/cf/i18n/resources/de-de.untranslated.json
+++ b/cf/i18n/resources/de-de.untranslated.json
@@ -544,6 +544,14 @@
     "translation": "Dashboard: {{.URL}}"
   },
   {
+    "id": "Error deleting domain {{.DomainName}}\n{{.Error}}",
+    "translation": "Error deleting domain {{.DomainName}}\n{{.Error}}"
+  },
+  {
+    "id": "Error finding domain {{.DomainName}}\n{{.Error}}",
+    "translation": "Error finding domain {{.DomainName}}\n{{.Error}}"
+  },
+  {
     "id": "Error getting the redirected location: {{.Error}}",
     "translation": "Error getting the redirected location: {{.Error}}"
   },
@@ -556,6 +564,10 @@
     "translation": "Error requesting one time code from server: {{.Error}}"
   },
   {
+    "id": "Failed fetching domains.\n{{.Error}}",
+    "translation": "Failed fetching domains.\n{{.Error}}"
+  },
+  {
     "id": "Features",
     "translation": "Features"
   },
@@ -566,6 +578,10 @@
   {
     "id": "Force unbinding without confirmation",
     "translation": "Force unbinding without confirmation"
+  },
+  {
+    "id": "Getting domains in org {{.OrgName}} as {{.Username}}...",
+    "translation": "Getting domains in org {{.OrgName}} as {{.Username}}..."
   },
   {
     "id": "Getting routes for org {{.OrgName}} / space {{.SpaceName}} as {{.Username}} ...\n",
@@ -586,6 +602,10 @@
   {
     "id": "Incorrect Usage. Requires DOMAIN as an argument\n\n",
     "translation": "Incorrect Usage. Requires DOMAIN as an argument\n\n"
+  },
+  {
+    "id": "Invalid router group guid: {{.Guid}}",
+    "translation": "Invalid router group guid: {{.Guid}}"
   },
   {
     "id": "NAME",
