--- a/cf/i18n/resources/de-de.all.json
+++ b/cf/i18n/resources/de-de.all.json
@@ -1724,6 +1724,10 @@
     "translation": "Fehler beim Löschen der Domäne {{.DomainName}}\n{{.ApiErr}}"
   },
   {
+    "id": "Error deleting domain {{.DomainName}}\n{{.Error}}",
+    "translation": ""
+  },
+  {
     "id": "Error disabling ssh support for ",
     "translation": "Fehler beim Löschen der SSH-Unterstützung für "
   },
@@ -1758,6 +1762,10 @@
   {
     "id": "Error finding domain {{.DomainName}}\n{{.ApiErr}}",
     "translation": "Fehler beim Suchen von Domänen {{.DomainName}}\n{{.ApiErr}}"
+  },
+  {
+    "id": "Error finding domain {{.DomainName}}\n{{.Error}}",
+    "translation": ""
   },
   {
     "id": "Error finding manifest",
@@ -1976,8 +1984,8 @@
     "translation": "Abrufen von Buildpacks ist fehlgeschlagen.\n{{.Error}}"
   },
   {
-    "id": "Failed fetching domains.\n{{.ApiErr}}",
-    "translation": "Abrufen von Domänen ist fehlgeschlagen. \n{{.ApiErr}}"
+    "id": "Failed fetching domains.\n{{.Error}}",
+    "translation": ""
   },
   {
     "id": "Failed fetching events.\n{{.ApiErr}}",
@@ -2105,7 +2113,7 @@
   },
   {
     "id": "Getting domains in org {{.OrgName}} as {{.Username}}...",
-    "translation": "Abrufen von Domänen in Organisation {{.OrgName}} als {{.Username}}..."
+    "translation": ""
   },
   {
     "id": "Getting env variables for app {{.AppName}} in org {{.OrgName}} / space {{.SpaceName}} as {{.Username}}...",
@@ -2620,6 +2628,10 @@
     "translation": "Ungültige Speicherbegrenzung: {{.Memory}}\n{{.ErrorDescription}}"
   },
   {
+    "id": "Invalid router group guid: {{.Guid}}",
+    "translation": ""
+  },
+  {
     "id": "Invalid timeout param: {{.Timeout}}\n{{.Err}}",
     "translation": "Ungültiger Parameter für timeout: {{.Timeout}}\n{{.Err}}"
   },
@@ -2870,10 +2882,6 @@
   {
     "id": "No changes were made",
     "translation": "Keine Änderungen vorgenommen"
-  },
-  {
-    "id": "No domains found",
-    "translation": "Keine Domänen gefunden"
   },
   {
     "id": "No events for app {{.AppName}}",
