--- a/cf/i18n/resources/es-es.all.json
+++ b/cf/i18n/resources/es-es.all.json
@@ -1724,6 +1724,10 @@
     "translation": "Error al suprimir el dominio {{.DomainName}}\n{{.ApiErr}}"
   },
   {
+    "id": "Error deleting domain {{.DomainName}}\n{{.Error}}",
+    "translation": ""
+  },
+  {
     "id": "Error disabling ssh support for ",
     "translation": "Se ha producido un error al inhabilitar el soporte de ssh para "
   },
@@ -1758,6 +1762,10 @@
   {
     "id": "Error finding domain {{.DomainName}}\n{{.ApiErr}}",
     "translation": "Error al buscar el dominio {{.DomainName}}\n{{.ApiErr}}"
+  },
+  {
+    "id": "Error finding domain {{.DomainName}}\n{{.Error}}",
+    "translation": ""
   },
   {
     "id": "Error finding manifest",
@@ -1976,8 +1984,8 @@
     "translation": "Error al captar paquetes de compilación.\n{{.Error}}"
   },
   {
-    "id": "Failed fetching domains.\n{{.ApiErr}}",
-    "translation": "Error al captar dominios.\n{{.ApiErr}}"
+    "id": "Failed fetching domains.\n{{.Error}}",
+    "translation": ""
   },
   {
     "id": "Failed fetching events.\n{{.ApiErr}}",
@@ -2105,7 +2113,7 @@
   },
   {
     "id": "Getting domains in org {{.OrgName}} as {{.Username}}...",
-    "translation": "Obteniendo dominios en la organización {{.OrgName}} como {{.Username}}..."
+    "translation": ""
   },
   {
     "id": "Getting env variables for app {{.AppName}} in org {{.OrgName}} / space {{.SpaceName}} as {{.Username}}...",
@@ -2620,6 +2628,10 @@
     "translation": "Límite de memoria no válido: {{.Memory}}\n{{.ErrorDescription}}"
   },
   {
+    "id": "Invalid router group guid: {{.Guid}}",
+    "translation": ""
+  },
+  {
     "id": "Invalid timeout param: {{.Timeout}}\n{{.Err}}",
     "translation": "Parámetro timeout no válido: {{.Timeout}}\n{{.Err}}"
   },
@@ -2870,10 +2882,6 @@
   {
     "id": "No changes were made",
     "translation": "No se han realizado cambios"
-  },
-  {
-    "id": "No domains found",
-    "translation": "No se han encontrado dominios"
   },
   {
     "id": "No events for app {{.AppName}}",
