--- a/cf/i18n/resources/ja-jp.all.json
+++ b/cf/i18n/resources/ja-jp.all.json
@@ -1724,6 +1724,10 @@
     "translation": "ドメイン {{.DomainName}} の削除時にエラーが発生しました\n{{.ApiErr}}"
   },
   {
+    "id": "Error deleting domain {{.DomainName}}\n{{.Error}}",
+    "translation": ""
+  },
+  {
     "id": "Error disabling ssh support for ",
     "translation": "次のものに対する SSH サポートを無効にしようとしたときエラーが発生しました: "
   },
@@ -1758,6 +1762,10 @@
   {
     "id": "Error finding domain {{.DomainName}}\n{{.ApiErr}}",
     "translation": "ドメイン {{.DomainName}} の検索時にエラーが発生しました\n{{.ApiErr}}"
+  },
+  {
+    "id": "Error finding domain {{.DomainName}}\n{{.Error}}",
+    "translation": ""
   },
   {
     "id": "Error finding manifest",
@@ -1976,8 +1984,8 @@
     "translation": "ビルドパックを取り出せませんでした。\n{{.Error}}"
   },
   {
-    "id": "Failed fetching domains.\n{{.ApiErr}}",
-    "translation": "ドメインを取り出せませんでした。\n{{.ApiErr}}"
+    "id": "Failed fetching domains.\n{{.Error}}",
+    "translation": ""
   },
   {
     "id": "Failed fetching events.\n{{.ApiErr}}",
@@ -2105,7 +2113,7 @@
   },
   {
     "id": "Getting domains in org {{.OrgName}} as {{.Username}}...",
-    "translation": "{{.Username}} として組織 {{.OrgName}} 内のドメインを取得しています..."
+    "translation": ""
   },
   {
     "id": "Getting env variables for app {{.AppName}} in org {{.OrgName}} / space {{.SpaceName}} as {{.Username}}...",
@@ -2620,6 +2628,10 @@
     "translation": "無効なメモリー制限: {{.Memory}}\n{{.ErrorDescription}}"
   },
   {
+    "id": "Invalid router group guid: {{.Guid}}",
+    "translation": ""
+  },
+  {
     "id": "Invalid timeout param: {{.Timeout}}\n{{.Err}}",
     "translation": "無効な timeout パラメーター: {{.Timeout}}\n{{.Err}}"
   },
@@ -2870,10 +2882,6 @@
   {
     "id": "No changes were made",
     "translation": "変更は行われませんでした"
-  },
-  {
-    "id": "No domains found",
-    "translation": "ドメインが見つかりませんでした"
   },
   {
     "id": "No events for app {{.AppName}}",
