--- a/cf/i18n/resources/pt-br.untranslated.json
+++ b/cf/i18n/resources/pt-br.untranslated.json
@@ -556,6 +556,14 @@
     "translation": "DOMAINS"
   },
   {
+    "id": "Error deleting domain {{.DomainName}}\n{{.Error}}",
+    "translation": "Error deleting domain {{.DomainName}}\n{{.Error}}"
+  },
+  {
+    "id": "Error finding domain {{.DomainName}}\n{{.Error}}",
+    "translation": "Error finding domain {{.DomainName}}\n{{.Error}}"
+  },
+  {
     "id": "Error getting the redirected location: {{.Error}}",
     "translation": "Error getting the redirected location: {{.Error}}"
   },
@@ -572,12 +580,20 @@
     "translation": "Error requesting one time code from server: {{.Error}}"
   },
   {
+    "id": "Failed fetching domains.\n{{.Error}}",
+    "translation": "Failed fetching domains.\n{{.Error}}"
+  },
+  {
     "id": "Force binding without confirmation",
     "translation": "Force binding without confirmation"
   },
   {
     "id": "Force unbinding without confirmation",
     "translation": "Force unbinding without confirmation"
+  },
+  {
+    "id": "Getting domains in org {{.OrgName}} as {{.Username}}...",
+    "translation": "Getting domains in org {{.OrgName}} as {{.Username}}..."
   },
   {
     "id": "Getting routes for org {{.OrgName}} / space {{.SpaceName}} as {{.Username}} ...\n",
@@ -602,6 +618,10 @@
   {
     "id": "Incorrect Usage. Requires DOMAIN as an argument\n\n",
     "translation": "Incorrect Usage. Requires DOMAIN as an argument\n\n"
+  },
+  {
+    "id": "Invalid router group guid: {{.Guid}}",
+    "translation": "Invalid router group guid: {{.Guid}}"
   },
   {
     "id": "No app files found in '{{.Path}}'",
