--- a/cf/i18n/resources/zh-hant.all.json
+++ b/cf/i18n/resources/zh-hant.all.json
@@ -1724,6 +1724,10 @@
     "translation": "刪除網域 {{.DomainName}} 時發生錯誤\n{{.ApiErr}}"
   },
   {
+    "id": "Error deleting domain {{.DomainName}}\n{{.Error}}",
+    "translation": ""
+  },
+  {
     "id": "Error disabling ssh support for ",
     "translation": "停用下者的 ssh 支援時發生錯誤："
   },
@@ -1758,6 +1762,10 @@
   {
     "id": "Error finding domain {{.DomainName}}\n{{.ApiErr}}",
     "translation": "尋找網域 {{.DomainName}} 時發生錯誤\n{{.ApiErr}}"
+  },
+  {
+    "id": "Error finding domain {{.DomainName}}\n{{.Error}}",
+    "translation": ""
   },
   {
     "id": "Error finding manifest",
@@ -1976,8 +1984,8 @@
     "translation": "提取建置套件時失敗。\n{{.Error}}"
   },
   {
-    "id": "Failed fetching domains.\n{{.ApiErr}}",
-    "translation": "提取網域時失敗。\n{{.ApiErr}}"
+    "id": "Failed fetching domains.\n{{.Error}}",
+    "translation": ""
   },
   {
     "id": "Failed fetching events.\n{{.ApiErr}}",
@@ -2105,7 +2113,7 @@
   },
   {
     "id": "Getting domains in org {{.OrgName}} as {{.Username}}...",
-    "translation": "正在以 {{.Username}} 身分取得組織 {{.OrgName}} 中的網域..."
+    "translation": ""
   },
   {
     "id": "Getting env variables for app {{.AppName}} in org {{.OrgName}} / space {{.SpaceName}} as {{.Username}}...",
@@ -2620,6 +2628,10 @@
     "translation": "無效的記憶體限制：{{.Memory}}\n{{.ErrorDescription}}"
   },
   {
+    "id": "Invalid router group guid: {{.Guid}}",
+    "translation": ""
+  },
+  {
     "id": "Invalid timeout param: {{.Timeout}}\n{{.Err}}",
     "translation": "無效的逾時參數：{{.Timeout}}\n{{.Err}}"
   },
@@ -2870,10 +2882,6 @@
   {
     "id": "No changes were made",
     "translation": "未進行任何變更"
-  },
-  {
-    "id": "No domains found",
-    "translation": "找不到任何網域"
   },
   {
     "id": "No events for app {{.AppName}}",
